[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "messandei"
version = "0.0.1"
authors = [
  { name="Ankush Chander", email="ankush.watchtower@gmail.com" },
]
description = "A simple stopwords based language detecter."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[project.urls]
"Homepage" = "https://github.com/Ankush-Chander/messandei"
"Bug Tracker" = "https://github.com/Ankush-Chander/messandei/issues"
